--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@feathersjs/express": "^4.5.4",
     "@feathersjs/feathers": "^4.5.3",
     "@feathersjs/socketio": "^4.5.4",
+    "@hapi/joi": "^17.1.1",
     "lodash": "^4.17.15",
     "nanoid": "^3.1.9"
   }
