--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@feathersjs/authentication": "^4.5.6",
+    "@feathersjs/authentication-local": "^4.5.6",
+    "@feathersjs/authentication-oauth": "^4.5.6",
+    "@feathersjs/configuration": "^4.5.5",
     "@feathersjs/express": "^4.5.4",
     "@feathersjs/feathers": "^4.5.3",
     "@feathersjs/socketio": "^4.5.4",
     "@hapi/joi": "^17.1.1",
+    "cors": "^2.8.5",
+    "jsrsasign": "^8.0.20",
     "lodash": "^4.17.15",
-    "nanoid": "^3.1.9"
+    "nanoid": "^3.1.9",
+    "sequelize": "^6.3.4",
+    "sqlite3": "^5.0.0"
   }
 }
